# poetry-latest-todo

./: .env  database.db  pyproject.toml
learn_poetry/: main.py
